--- a/src/main/resources/static/css/mod/cluster.css
+++ b/src/main/resources/static/css/mod/cluster.css
@@ -910,6 +910,45 @@ i.pushOrg {
     border-radius: 7px;
     transition: all 1s ease-out;
 }
+/*////////////*/
+.detail-info .info-list #cluster-listing {
+    text-align: center;
+}
+.detail-info .info-list #cluster-listing thead tr {
+    height: 40px;
+}
+.detail-info .info-list #cluster-listing thead .detail-rows {
+    font-size: 14px;
+    border-bottom: 1px solid #ddd;
+    padding-left: 25px;
+}
+.detail-info .info-list #cluster-listing tbody tr {
+    height: 40px;
+    border-bottom: 1px solid #E7E7E7;
+}
+.table>tbody>tr>td {
+    vertical-align: middle;
+}
+.table>tbody>tr>td {
+    vertical-align: middle;
+}
+.detail-info .info-list #cluster-listing tbody td .slider_bj {
+    position: relative;
+    background: #DADBDE;
+    border-radius: 7px;
+    height: 15px;
+    width: 95%;
+}
+.detail-info .info-list #cluster-listing tbody td .slider_bj .slider_block {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 15px;
+    background: #2FBA66;
+    border-radius: 7px;
+    transition: all 1s ease-out;
+}
 /*master-CPU*/
 .detail-info .info-list #masterCpuResourceInfo tbody td .slider_bj {
     position: relative;
@@ -935,6 +974,12 @@ i.pushOrg {
 
 
 .detail-info .info-list #table-listing, #masterCpuResourceInfo thead .detail-rows {
+    font-size: 14px;
+    border-bottom: 1px solid #ddd;
+    padding-left: 25px;
+    background: #FAFAFA;
+}
+.detail-info .info-list #cluster-listing, #masterCpuResourceInfo thead .detail-rows {
     font-size: 14px;
     border-bottom: 1px solid #ddd;
     padding-left: 25px;
