--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -72,7 +72,7 @@
 .modalCrealApp .steps-main .progre .radius_step {
     color: #999;
     height: 45px;
-    width: 33.33%;
+    width: 50%;
     float: left;
     border-bottom: 2px solid #e2e2e4;
 }
@@ -769,11 +769,11 @@ i.pushOrg {
     background: #009933;
 }
 
-#ram, #confRamSlider_input {
+/* #ram, #confRamSlider_input {
     width: 70px;
     text-indent: 8px;
     margin-left: 20px;
-}
+} */
 
 
 .popWin {
