添加上传镜像&dockerfile等

--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -306,6 +306,9 @@
 .modalCrealApp .select-versions {
     width: 83%;
 }
+.in_style_mid{
+	width: 81.5%;
+}
 
 .dropdown-position {
     left: 120px;
