--- a/src/main/resources/static/css/mod/storage.css
+++ b/src/main/resources/static/css/mod/storage.css
@@ -616,4 +616,120 @@ span.i {
     background: #3D8DDB;
     margin-right: 15px;
 }
+/* 创建基本信息 */
+.modalCrealApp {
+    background: #fff;
+    min-height: 100%;
+}
 
+.modalCrealApp .steps-main {
+    margin: 0 auto;
+    overflow: hidden;
+    padding-bottom: 10px;
+}
+
+.progre {
+    text-align: center;
+    border-bottom: 2px solid #e2e2e4;
+    width: 570px;
+    margin: 30px auto;
+    height: 45px;
+}
+
+.modalCrealApp .steps-main .progre {
+    width: 100%;
+    border: 0;
+}
+
+.modalCrealApp .steps-main .progre .radius_step {
+    color: #999;
+    height: 45px;
+    width: 50%;
+    float: left;
+    border-bottom: 2px solid #e2e2e4;
+}
+
+.modalCrealApp .steps-main .progre .radius_step.action {
+    border-bottom: 2px solid #418ac7;
+}
+
+.radius_step {
+    color: #999;
+    padding: 0 20px;
+    height: 45px;
+    width: 190px;
+    float: left;
+}
+
+.radius_step span {
+    margin: 3px auto;
+    padding: 6px 10px;
+    border-radius: 30px;
+    background: #cbcbcb;
+    color: #fff;
+}
+
+.radius_step.action span {
+    background: #418ac7;
+}
+
+.step-inner {
+    position: relative;
+    left: 0;
+    width: 1400px;
+    height: 280px;
+    overflow: hidden;
+}
+.step-inner #update_tenement .host_step1 .blankapp .row .stepLabel{
+    line-height: 34px;
+    margin-bottom: 0px;
+    width: 20%;
+    float: left ;
+}
+
+.modalCrealApp .steps-main .step-inner {
+    position: relative;
+    width: 300%;
+    overflow: hidden;
+    min-height: 300px;
+    height: auto;
+}
+
+.host_step1, .host_step2, .host_step3 {
+    float: left;
+    width: 700px;
+}
+
+.modalCrealApp .steps-main .step-inner .host_step1 {
+    height: auto;
+    min-height: 200px;
+}
+
+.modalCrealApp .steps-main .step-inner .host_step1,
+.modalCrealApp .steps-main .step-inner .host_step2,
+.modalCrealApp .steps-main .step-inner .host_step3 {
+    width: 33.33%;
+    padding: 0 4rem;
+}
+
+.select-server {
+    width: 140px;
+    text-align: right;
+    float: left;
+    height: 50px;
+    line-height: 35px;
+}
+
+.select-server > span {
+    padding-right: 10px;
+    text-align: right;
+}
+
+.modalCrealApp .steps-main .step-inner .host_step1 .select-server,
+.modalCrealApp .steps-main .step-inner .host_step2 .select-server,
+.modalCrealApp .steps-main .step-inner .host_step3 .select-server {
+    width: auto;
+    float: left;
+    height: 50px;
+    line-height: 35px;
+}
