--- a/src/main/resources/static/css/mod/docker-registry.css
+++ b/src/main/resources/static/css/mod/docker-registry.css
@@ -195,7 +195,7 @@
     top: -10px;
 }
 
-.mirror-head .type-info .fork {
+.mirror-head .type-info .fork .forkquick {
     cursor: pointer;
     font-size: 14px;
 }
