--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -543,7 +543,7 @@
     border: 1px solid #DDDDDD;
     background: #fff;
     border-radius: 4px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .contentMain .baseInfo a {
@@ -697,7 +697,38 @@ i.pushOrg {
     height:500px;
     overflow-y:auto;
 }
+.historycontainerLog {
+    background: black;
+    color: #2FBA66;
+    width: 98%;
+    margin-left: 1%;
+    min-height: 300px;
+    position: relative;
+    transition: all 0.5s;
+    padding-right:0px;
+    padding-bottom:0px;
+}
 
+
+.historycontainerLog.all{
+    z-index: 1000000;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    margin-left:0;
+    transition:all 0.5s;
+}
+.historycontainerLog.all .weblog{
+    height: calc(100% - 40px)
+}
+
+.historycontainerLog .weblog{
+    padding:5px 10px;
+    height:500px;
+    overflow-y:auto;
+}
 #date_log{
     background: none;
     border:0;
@@ -711,6 +742,12 @@ i.pushOrg {
 
 
 .containerLog .weblogtitle {
+    height: 40px;
+    background: #1C2022;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.historycontainerLog .weblogtitle {
     height: 40px;
     background: #1C2022;
     padding-left: 2%;
@@ -831,3 +868,10 @@ tr.focus{
 #import-service form table tbody tr td select{
     height: 28px;
 }
+.baseInfo .navbar-nav li a{
+	padding-top: 20px;
+    padding-bottom: 18px;
+}
+
+
+
