日志&历史日志

--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -735,6 +735,12 @@ i.pushOrg {
     width: 220px;
     text-align: right;
 }
+#date_log1{
+    background: none;
+    border:0;
+    width: 220px;
+    text-align: right;
+}
 #date_log:focus{
     border:0;
     box-shadow: none;
