修改环境变量&去掉构建的提示框

--- a/src/main/resources/static/css/mod/template.css
+++ b/src/main/resources/static/css/mod/template.css
@@ -750,7 +750,10 @@ span.i {
     text-indent: 5px;
 }
 #crateEnv, #importBtn, #crateEnvVariate{
-	cursor: pointer
+	cursor: pointer;
+}
+.vals-env{
+	cursor: pointer;
 }
 
 
