--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -127,6 +127,7 @@
     border: 1px solid #DADADA;
     margin-top: 20px;
     padding: 5px;
+    padding-top: 25px;
 }
 
 .item-obj .registryinfo .registry tr {
@@ -459,7 +460,7 @@ td .dockerfileinput {
     color: #666;
 }
 
-/* µ¼³öµ¼ÈëÄ£°åµ¯´° */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä£ï¿½åµ¯ï¿½ï¿½ */
 .dynamic-scale{
 	margin-left: 43px;
 }
@@ -482,3 +483,33 @@ tr.focus{
 	border-radius: 2px;
 	width:17px;
 }
+.c-project-tit{
+	width:10%;
+	line-height:34px;
+	margin-left:10px;
+	float:left;
+	display:block;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+.c-project-con{
+	width:88%;	
+}
+textarea.c-project-con{
+	margin-top:8px;	
+}
+.c-title{
+	margin-top:20px;
+}
+#git-higher,#ant-higher{
+	border: 1px solid #ccc;
+	border-radius:5px;
+	margin-right:27px;
+	margin-bottom: 15px;
+}
+#git-higher:hover,#ant-higher:hover{
+	background-color:#cdcdcd;
+	border: 1px solid #ccc;
+}
+
