--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -438,6 +438,7 @@
 
 #cratePATH {
     cursor: pointer;
+    line-height:34px;
 }
 
 .enabled {
@@ -907,12 +908,14 @@ tr.focus{
 .checkitems li .c-unit{
 	margin-left: -34px;
     display: inline-block;
+    line-height: 34px
 }
 .checkitems li input{
 	border: 1px solid #ccc;
 	text-indent: 8px;
 	width:208px;
 	line-height:24px;
+	float:left;
 }
 #imgVersionName{
 	width: 165px;
@@ -928,4 +931,22 @@ tr.focus{
 	color:#5cb85c;
 	cursor: pointer;
 }
-
+li.line-h-3 {
+    margin-bottom: 8px;
+}
+li.line-h-3 input.in_style,#instanceNum,#Name,#Value,#mountPath,#selectVolume{
+    float:left;
+}
+li.line-h-3 span i{
+    line-height:34px;
+    margin-left:4px;
+}
+.s-unit{
+	line-height: 34px;
+    margin-left: -50px;
+    display: inline-block;
+}
+.check-lable{
+	float:left;
+	line-height:34px;
+}
