修改服务detail&增加服务地址修改项

--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -504,7 +504,9 @@
     max-width: 100%;
     max-height: 100%;
 }
-
+.succeed-content{
+	width:60%;
+}
 .succeed-content,
 .succeed-status {
     float: left;
@@ -519,7 +521,7 @@
     text-align: right;
     position: relative;
     top: 35px;
-    width: 30%;
+    /* width: 30%; */
     float: right;
     padding-right: 20px;
 }
@@ -961,4 +963,14 @@ li.line-h-3 span i{
 }
 .envlabel{
 	margin-bottom:15px;
+}
+.editCon input{
+	border-radius: 5px;
+}
+#editServiceAddrBtn,#saveEdit{
+	color: #337ab7;
+}
+#editServiceAddr{
+	margin-right: 6px;
+	width:36%;
 }
