--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -484,7 +484,7 @@ tr.focus{
 	width:17px;
 }
 .c-project-tit{
-	width:10%;
+	width:11%;
 	line-height:34px;
 	margin-left:10px;
 	float:left;
@@ -494,7 +494,7 @@ tr.focus{
     text-overflow:ellipsis;
 }
 .c-project-con{
-	width:88%;	
+	width:86%;	
 }
 textarea.c-project-con{
 	margin-top:8px;	
@@ -511,4 +511,54 @@ textarea.c-project-con{
 #git-higher:hover,#ant-higher:hover{
 	background-color:#cdcdcd;
 	border: 1px solid #ccc;
+}
+.ci-h5{
+	padding-right: 10px!important;
+	padding-left:10px!important;
+	cursor: pointer!important;
+	
+}
+h5.active{
+	color: #3c7bca;
+	font-size: 15px;
+}
+.addCiStepRow{
+	width: 98%;
+    margin: 0 auto;
+}
+.addCiStepRow .col-sm-12 .ibox-title{
+	border-top: 1px solid #dadada;
+	border-left: 4px solid #dadada;
+	border-right: 1px solid #dadada;
+}
+.addCiStepRow .col-sm-12 .ibox-content{
+	border-left: 4px solid #dadada;
+	border-right: 1px solid #dadada;
+	border-bottom: 1px solid #dadada;
+}
+.ibox-content .c-project-con{
+	width:80%;	
+}
+.ibox-content .c-project-tit{
+	width:16%;	
+}
+.ibox-content #ant-higher{
+	border: 1px solid #ccc;
+	border-radius:5px;
+	margin-right:40px;
+	margin-bottom: 15px;
+}
+.dropdown-toggle .caret{
+	margin-left: 10px;
+}
+.dropdown-menu li{
+	line-height: 34px;
+}
+#dropdown-btn{
+	width:150px;
+	background-color:#dadada;
+}
+.registryinfo ul.nav-bar{
+	margin-bottom:20px;
+	margin-left:26px;
 }
