*:修改上传镜像页面 & sheraAPI

--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -526,3 +526,7 @@ table.dataTable thead .sorting:after {
 .dataTables_wrapper {
     padding-bottom: 30px;
 }
+
+.fa-info-circle{
+    cursor: pointer;
+}
