*:修改服务修改

--- a/src/main/resources/static/css/core/base.css
+++ b/src/main/resources/static/css/core/base.css
@@ -527,6 +527,6 @@ table.dataTable thead .sorting:after {
     padding-bottom: 30px;
 }
 
-.fa-info-circle{
+.fa-info-circle,.fa-edit, .fa-save, .fa-times{
     cursor: pointer;
 }
