--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -502,13 +502,13 @@ textarea.c-project-con{
 .c-title{
 	margin-top:20px;
 }
-#git-higher,#ant-higher{
+#git-higher,.ant-higherBtn{
 	border: 1px solid #ccc;
 	border-radius:5px;
 	margin-right:27px;
 	margin-bottom: 15px;
 }
-#git-higher:hover,#ant-higher:hover{
+#git-higher:hover,.ant-higherBtn:hover{
 	background-color:#cdcdcd;
 	border: 1px solid #ccc;
 }
@@ -542,10 +542,16 @@ h5.active{
 .ibox-content .c-project-tit{
 	width:16%;	
 }
-.ibox-content #ant-higher{
+.ibox-content .ant-higherBtn{
 	border: 1px solid #ccc;
 	border-radius:5px;
 	margin-right:40px;
+	margin-bottom: 15px;
+}
+.ibox-content .maven-higherBtn{
+	border: 1px solid #ccc;
+	border-radius:5px;
+	margin-right:55px;
 	margin-bottom: 15px;
 }
 .dropdown-toggle .caret{
