--- a/src/main/resources/static/css/mod/service.css
+++ b/src/main/resources/static/css/mod/service.css
@@ -934,48 +934,48 @@ tr.focus{
 	color:#5cb85c;
 	cursor: pointer;
 }
-/* <<<<<<< HEAD */
-/* li.line-h-3 { */
-/*     margin-bottom: 8px; */
-/* } */
-/* li.line-h-3 input.in_style,#instanceNum,#Name,#Value,#mountPath,#selectVolume{ */
-/*     float:left; */
-/* } */
-/* li.line-h-3 span i{ */
-/*     line-height:34px; */
-/*     margin-left:4px; */
-/* } */
-/* .s-unit{ */
-/* 	line-height: 34px; */
-/*     margin-left: -50px; */
-/*     display: inline-block; */
-/* } */
-/* .check-lable{ */
-/* 	float:left; */
-/* 	line-height:34px; */
-/* } */
-/* .forEnvName{ */
-/* 	float:left; */
-/* 	width:15%; */
-/* 	line-height:34px; */
-/* } */
-/* .envName{ */
-/* 	width:85%; */
-/* } */
-/* .envlabel{ */
-/* 	margin-bottom:15px; */
-/* } */
-/* .editCon input{ */
-/* 	border-radius: 5px; */
-/* } */
-/* #editServiceAddrBtn,#saveEdit,#canclEdit{ */
-/* 	color: #337ab7; */
-/* } */
-/* #editServiceAddr{ */
-/* 	margin-right: 6px; */
-/* 	width:36%; */
-/* } */
-/* ======= */
+/* service-create */
+li.line-h-3 { 
+    margin-bottom: 8px;
+}
+li.line-h-3 input.in_style,#instanceNum,#Name,#Value,#mountPath,#selectVolume{
+    float:left;
+}
+li.line-h-3 span i{
+    line-height:34px;
+    margin-left:4px;
+}
+.s-unit{
+	line-height: 34px;
+    margin-left: -50px;
+    display: inline-block;
+}
+.check-lable{
+	float:left;
+	line-height:34px;
+}
+.forEnvName{
+	float:left;
+	width:15%;
+	line-height:34px;
+}
+.envName{
+	width:85%;
+}
+.envlabel{
+	margin-bottom:15px;
+}
+.editCon input{
+	border-radius: 5px;
+}
+#editServiceAddrBtn,#saveEdit,#canclEdit{
+	color: #337ab7;
+}
+#editServiceAddr{
+	margin-right: 6px;
+	width:36%;
+} 
+
 /* AGILE BOARD */
 .agile-list tr:hover {
     cursor: pointer;
@@ -1007,4 +1007,4 @@ tr.focus{
 .scpDoc div.ibox{
 	border-left: 1px solid #e7eaec;
 } 
-/* >>>>>>> refs/heads/develop_shellinabox */
+
