修改代码构建模板导入功能

--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -589,4 +589,10 @@ textarea.c-project-con{
 #ciTab .ci{
 	margin-left:16px;
 }
+.registryinfo div.form-group1{
+	margin-bottom: 8px;
+}
+.registryinfo .row input{
+	text-indent: 10px;
+}
 
