代码构建detail版本信息width修改

--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -340,7 +340,7 @@ td .dockerfileinput {
     line-height: 30px;
     color: #333;
     text-indent: 0;
-    width: 70px;
+    min-width: 70px;
     position: absolute;
     right: 0;
     margin-top: 10px;
