代码构建添加hook&删除hook按钮

--- a/src/main/resources/static/css/mod/ci.css
+++ b/src/main/resources/static/css/mod/ci.css
@@ -442,6 +442,15 @@ td .dockerfileinput {
     border: 0;
     background: #EF7772;
 }
+.other-details .col-9x .btn-deleteHook {
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    padding: 0;
+    margin: 10px 0;
+    border: 0;
+}
 
 .other-details .col-9x .other-hint {
     color: #666;
@@ -619,3 +628,7 @@ textarea.c-project-con{
 .conCred{
 	width: 76%;
 }
+.c-project-checkbox{
+	height: 24px;
+}
+
